0420/ingress/nfspod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nfspod

spec: 
  containers: 
    - name: nfsctn
      image: nginx
      volumeMounts: 
      - name: nfsvol 
        mountPath: /backup #알아서 생성하고 nfsvol을 연결함


  volumes: 
  - name: nfsvol 
    nfs: 
      path: /k8s
      server: 211.183.3.99
